# realeinherjar.github.io

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  config.yml  devshell.toml  feed.xml  index.html  index.json  index.xml  robots.txt  shell.nix  sitemap.xml  tailwind.config.js  tailwind.css
.direnv/: nix-profile-pre529487.f3dab3509afc  nix-profile-pre529487.f3dab3509afc.rc
.github/workflows/: ci.yml  deploy.yml  gh-pages.yml
2023-08-19-censorship/: index.html
2023-09-08-taproot/: index.html
2023-10-08-elliptic_curves/: index.html
about/: index.html
archetypes/: post.md  post_math.md
assets/: publickey.txt
assets/dioxus/: einherjar-site.js  einherjar-site_bg.wasm
categories/: index.html  index.xml
categories/bitcoin-basics/: index.html  index.xml
content/: about.md
content/posts/: 2023-08-19-censorship.md  2023-09-08-taproot.md  2023-09-11-tabconf_2023.md  privacy.md
posts/: 2023-08-13-hello.html  2023-08-13-hello.md  index.html  index.xml
posts/page/1/: index.html
privacy/: index.html
public/: tailwind.css
search/: index.html
src/: main.rs
src/components/: blog.rs  content.rs  home.rs  nav.rs  notfound.rs
src/hooks/: markdown.rs  theme.rs
src/markdown/: 2023-08-13-hello.md  test.md
src/utils/: files.rs  rss.rs
static/assets/: publickey.txt
tags/: index.html  index.xml
tags/bitcoin/: index.html  index.xml
tags/cryptography/: index.html  index.xml
tags/cypherpunk/: index.html  index.xml
tags/opinion/: index.html  index.xml
tags/privacy/: index.html  index.xml
tags/taproot/: index.html  index.xml
(+9 files in other folders)
