[package]
name = "dioxus-site"
version = "0.1.0"
authors = ["Einherjar <realeinherjar@proton.me>"]
edition = "2021"


[dependencies]
dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
dioxus-router = { version = "0.4", features = ["web"] }
log = "0.4"
dioxus-logger = "0.4"
dioxus-free-icons = { version = "0.7", features = [
  "font-awesome-brands",
  "font-awesome-solid",
] }
js-sys = "0.3"
rss = { version = "2", features = ["builders", "validation"] }
